--- a/SRC/style.css
+++ b/SRC/style.css
@@ -2,10 +2,29 @@
 
 /*Cabeçalho*/
 header{
-	background-color: #3db36b;
+	background-color: #d47b14;
 	color: #fff;
 	padding:15px;
 	text-align: center;
+	border-bottom: 10px solid #e2e2e2a4;
 }
 
 /*Grid de produtos*/
+.container{
+	background-color: #eeeeee;
+	min-height: 60vh;
+	padding: 50px;
+}
+
+.card{
+	width: 31%;
+	display: inline-block;
+}
+
+/*Rodapé*/
+footer{
+	background-color: #dd8520fd;
+	color: #fff;
+	border-top: 3px solid #e2e2e2a4;
+	padding: 80px;
+}
